1. App增加两个接口
